ant-collapse style fix

--- a/src/nova-ds.scss
+++ b/src/nova-ds.scss
@@ -149,3 +149,11 @@ footer {
 .ant-drawer .ant-drawer-body {
   padding: 0;
 }
+
+.ant-collapse  {
+  border: 1px solid white;
+}
+
+.ant-collapse-item {
+  border: 1px solid white!important;
+}
